# dupt

./: .gitignore  .gitmodules  Cargo.toml  dupt-repo-main.conf  readme.md
configs/: configs.conf
scripts/: mkdupt.sh
sources/: list.config  list.json  pkgs.config  repos.conf  sources.conf
sources/repositories/: dupt-repo-main.json
src/: lib.rs  main.rs  package.rs  run.rs
src/lib/: config.rs  lib.rs  package.rs  tools.rs
src/lib/commands/: command_list.rs  install.rs  mod.rs  pkginfo.rs  remove.rs  run.rs  search.rs  update.rs
src/lib/tools/: containers.rs  packages.rs  paths.rs
src/libdupt/: package_data.rs
src/libdupt/commands/: install.rs  search.rs  update.rs
src/libdupt/tools/: packages.rs
testing/ghostknight/: PKGINFO
testing/ghostknight/control/: build.sh
zips/: ghostknight.config
