[package]
name = "dupt"
version = "0.1.0"
edition = "2021"

[lib]
name = "libdupt"
path = "src/libdupt/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

flate2 = "1.0"
ansi_term = "0.12.1"
tar = "0.4.40"
termsize = "0.1.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
curl = "0.4.46"
